@@ -53,7 +53,13 @@ def add_to_python_path(*components):
     path = apply(os.path.join, (__lib_dir, ) + components)
     path = os.path.normpath(path)
     if path not in sys.path:
-        sys.path.append(path)
+        # Insert the path element at the front, so that QM can replace
+        # Python system libraries.
+        # FIXME: This also menas that users cannot replace QM libraries
+        # by setting the PYTHONPATH environment variable, since this is
+        # prepended to 'sys.path' before we get here.  This might not be
+        # a good restriction.
+        sys.path.insert(0, path)
 
 
 ########################################################################
